adding line number using cidehilite

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,5 +4,7 @@ nav:
     - About: about.md
 theme: readthedocs
 language: th
+
 markdown_extensions:
-  - codehilite
+  - codehilite:
+      linenums: true
