--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,10 +4,12 @@ nav:
     - About: about.md
 theme: readthedocs
 language: th
-
 markdown_extensions:
-  - codehilite:
-      linenums: true
+  - codehilite
 
-markdown_extensions:
-  - footnotes
+theme_dir: doc_theme
+extra_css:
+  - doc_theme/extra.css
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.6.0/clipboard.min.js
+  - doc_theme/extra.js
