--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,13 +3,14 @@ nav:
     - Home: index.md
     - About: about.md
 theme: readthedocs
-language: th
-markdown_extensions:
-  - codehilite
 
-theme_dir: doc_theme
 extra_css:
-  - doc_theme/extra.css
+  - extra.css
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.6.0/clipboard.min.js
-  - doc_theme/extra.js
+  - extra.js
+
+markdown_extensions:
+  - footnotes
+  - codehilite:
+      linenums: true
