--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,15 +2,15 @@ site_name: Arduitronicshub
 nav:
     - Home: index.md
     - About: about.md
-theme: readthedocs
 
-extra_css:
-  - extra.css
-extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.6.0/clipboard.min.js
-  - extra.js
+theme:
+    name: readthedocs
 
 markdown_extensions:
-  - footnotes
   - codehilite:
-      linenums: true
+      linenums: false
+  - footnotes
+  - pymdownx.arithmatex
+
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML
