inline number added

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,6 @@ markdown_extensions:
   - codehilite:
       linenums: true
 
-
-
 extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML
+  - 'javascripts/extra.js'
+  - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
